<resources>
    <string name="app_name">AndroidProjectSettingInKotlin</string>
    <string name="base_url">http://test.com</string>
    <string name="base_prefs">basePrefs</string>

    <!-- TODO) 공통 텍스트 -->
    <string name="library_file_name">library_list.xml</string>
    <string name="confirm">확인</string>

    <!-- TODO) 다이얼로그 -->
    <string name="dialog_permission_title">서비스 이용 알림</string>
    <string name="dialog_permission_content">
필수 권한을 허용해야 서비스 정상 이용이 가능합니다.\n권한 요청 시 반드시 허용해주세요.
    </string>
    <string name="dialog_permission_once_content">
필수 권한을 허용해야 서비스 정상 이용이 가능합니다.\n한번 더 거절 시 서비스 이용이 불가할 수 있습니다.
    </string>
    <string name="dialog_permission_twice_content">
필수 권한을 허용해야 서비스 정상 이용이 가능합니다.\n두 번 이상 거절했거나, 권한 요청 시 \'다시 묻지 않음\'을 체크했을 경우 앱 재설치 또는 수동으로 권한을 부여해주세요.
    </string>

    <!-- TODO) Permission Activity -->
    <string name="permission_act_title">어메이징 푸드 권한 안내</string>
    <string name="permission_act_subtitle">
어메이징 푸드는 아래 권한들을 필요로 합니다.\n서비스 사용 중 앱에서 요청 시 허용해주세요.
    </string>
    <string name="permission_act_require_permission">필수 접근 권한</string>
    <string name="permission_act_optional_permission">선택 접근 권한</string>
    <string name="permission_view_dot">·</string>
    <string name="permission_view_camera_title">카메라</string>
    <string name="permission_view_camera_content">
운전면허증은 반드시 스캔하여 등록해야 하며, 운행 전 차량 확인 시 반드시 실시간 촬영이 필요합니다.
    </string>
    <string name="permission_view_phone_title">전화</string>
    <string name="permission_view_phone_content">
본인 이용 확인을 위해 앱을 사용 중인 휴대폰의 전화번호를 조회합니다.
    </string>
    <string name="permission_view_location_title">위치</string>
    <string name="permission_view_location_content">
내 현재 위치는 쏘카존 찾기, 부름 서비스 차량 제어를 위한 필수 정보로 활용됩니다.
    </string>
    <string name="permission_view_storage_space_title">저장공간</string>
    <string name="permission_view_storage_space_content">
운행 전 차량 확인 시 촬영한 사진이 저장됩니다.
    </string>
    <string name="permission_view_bluetooth_title">블루투스</string>
    <string name="permission_view_bluetooth_content">
차량을 제어할 때 블루투스를 이용할 수 있습니다. (문 열기, 문 잠금 등)
    </string>
</resources>